@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2010 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2013 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -144,7 +144,7 @@ public class WebModule extends org.netbeans.modules.schema2beans.BaseBean {
         if (value != null) {
             values = new Boolean[value.length];
             for (int i = 0; i < value.length; i++) {
-                values[i] = new Boolean(value[i]);
+                values[i] = Boolean.valueOf(value[i]);
             }
         }
         this.setValue(IDEMPOTENT_URL_PATTERN, values);
